--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next-themes": "^0.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-tweet": "^3.2.2",
     "tailwind-merge": "^3.0.2",
     "tsparticles": "^3.8.1",
     "viem": "^2.23.5",
