feat: implement strategy page with wallet connection, strategy component, and questionnaire functionality

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_AGENT_URL=https://kolective.optifi-agentz.xyz
+NEXT_PUBLIC_API_AGENT_URL=https://api.kolective.space
 NEXT_PUBLIC_API_GRAPHQL_URL=https://api.studio.thegraph.com/query/91582/kolective/version/latest
 NEXT_PUBLIC_API_URL=https://kolective-ethsf-backend.vercel.app
 NEXT_PUBLIC_CMC_API_KEY=40ca06ad-e462-4bf4-8e59-09a5b5a16f09
