--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "framer-motion": "^12.4.7",
     "graphql-request": "^7.1.2",
     "intl-messageformat": "^10.5.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
     "motion": "^12.4.10",
     "next": "15.0.4",
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "15.0.4",
     "@react-types/shared": "3.25.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
