feat: update environment configuration and add PM2 support; refine RegistrationModal text

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
+# Copy this file to .env.production or .env.development and fill in your values
+
+PORT=4466
+NODE_ENV=production
+
+# Database Configuration
+# DATABASE_URL=
+
+# API Keys
+# API_KEY=
+
+# Other Configuration
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 
 NEXT_PUBLIC_RPC_URL_BASE_SEPOLIA=
